--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -4,12 +4,14 @@ import Breadcrumbs from "@components/Breadcrumbs.astro";
 interface StringTitleProp {
   pageTitle: string;
   pageDesc?: string;
+  className?: string;
 }
 
 interface ArrayTitleProp {
   pageTitle: [string, string];
   titleTransition: string;
   pageDesc?: string;
+  className?: string;
 }
 
 export type Props = StringTitleProp | ArrayTitleProp;
@@ -18,21 +20,21 @@ const { props } = Astro;
 ---
 
 <Breadcrumbs />
-<main id="main-content">
+<main id="main-content" class="relative">
   <div class="col-span-8 sm:col-start-2 sm:col-span-6">
     {
       "titleTransition" in props ? (
-        <h1>
+        <h1 class={props.className}>
           {props.pageTitle[0]}
           <span transition:name={props.titleTransition}>
             {props.pageTitle[1]}
           </span>
         </h1>
       ) : (
-        <h1>{props.pageTitle}</h1>
+        <h1 class={props.className}>{props.pageTitle}</h1>
       )
     }
-    <p>{props.pageDesc}</p>
+    <p class="opacity-50 !mb-0 lg:absolute lg:top-14">{props.pageDesc}</p>
     <slot />
   </div>
 </main>
@@ -43,7 +45,7 @@ const { props } = Astro;
     @apply mx-auto w-full grid grid-cols-8 gap-8 px-4 pb-12 z-10 bg-skin-fill;
   }
   #main-content h1 {
-    @apply text-2xl font-light sm:text-3xl;
+    @apply text-3xl font-light sm:text-7xl;
   }
   #main-content p {
     @apply mb-6 mt-2 italic;
