--- a/src/layouts/Posts.astro
+++ b/src/layouts/Posts.astro
@@ -23,50 +23,50 @@ const next = pageNum < totalPages ? "" : "disabled";
 
 <Layout title={`Posts | ${SITE.title}`}>
   <Header activeNav="posts" />
-  <Main pageTitle="The Blog Posts" pageDesc="All the articles I've posted.">
-    <ul class="sm:grid sm:grid-cols-2 sm:gap-6">
+  <Main pageTitle="Articles" pageDesc="" className="!font-black md:!text-7xl lg:!text-[160px] sm:right-0 sm:-tracking-widest md:-mr-10 lg:-mb-14 opacity-25 sm:opacity-10">
+    <ul class="grid gap-y-0 md:grid-cols-2 sm:gap-x-8 lg:gap-x-12">
       {
         posts.map(({ data }) => (
           <Card href={`/posts/${slugify(data)}`} frontmatter={data} />
         ))
       }
     </ul>
+      {
+      totalPages > 1 && (
+        <nav class="pagination-wrapper" aria-label="Pagination">
+          <LinkButton
+            disabled={prev === "disabled"}
+            href={`/posts${pageNum - 1 !== 1 ? "/" + (pageNum - 1) : ""}`}
+            className={`mr-4 select-none ${prev}`}
+            ariaLabel="Previous"
+          >
+            <svg xmlns="http://www.w3.org/2000/svg" class={`${prev}-svg`}>
+              <path d="M12.707 17.293 8.414 13H18v-2H8.414l4.293-4.293-1.414-1.414L4.586 12l6.707 6.707z" />
+            </svg>
+            Prev
+          </LinkButton>
+          <LinkButton
+            disabled={next === "disabled"}
+            href={`/posts/${pageNum + 1}`}
+            className={`ml-4 select-none ${next}`}
+            ariaLabel="Next"
+          >
+            Next
+            <svg xmlns="http://www.w3.org/2000/svg" class={`${next}-svg`}>
+              <path d="m11.293 17.293 1.414 1.414L19.414 12l-6.707-6.707-1.414 1.414L15.586 11H6v2h9.586z" />
+            </svg>
+          </LinkButton>
+        </nav>
+      )
+    }
   </Main>
-
-  {
-    totalPages > 1 && (
-      <nav class="pagination-wrapper" aria-label="Pagination">
-        <LinkButton
-          disabled={prev === "disabled"}
-          href={`/posts${pageNum - 1 !== 1 ? "/" + (pageNum - 1) : ""}`}
-          className={`mr-4 select-none ${prev}`}
-          ariaLabel="Previous"
-        >
-          <svg xmlns="http://www.w3.org/2000/svg" class={`${prev}-svg`}>
-            <path d="M12.707 17.293 8.414 13H18v-2H8.414l4.293-4.293-1.414-1.414L4.586 12l6.707 6.707z" />
-          </svg>
-          Prev
-        </LinkButton>
-        <LinkButton
-          disabled={next === "disabled"}
-          href={`/posts/${pageNum + 1}`}
-          className={`ml-4 select-none ${next}`}
-          ariaLabel="Next"
-        >
-          Next
-          <svg xmlns="http://www.w3.org/2000/svg" class={`${next}-svg`}>
-            <path d="m11.293 17.293 1.414 1.414L19.414 12l-6.707-6.707-1.414 1.414L15.586 11H6v2h9.586z" />
-          </svg>
-        </LinkButton>
-      </nav>
-    )
-  }
+  
   <Footer noMarginTop={totalPages > 1} />
 </Layout>
 
 <style>
   .pagination-wrapper {
-    @apply mb-8 mt-auto flex justify-center;
+    @apply mt-4 flex justify-center;
   }
   .disabled {
     @apply pointer-events-none select-none opacity-50 hover:text-skin-base group-hover:fill-skin-base;
